src/test/ui/parser/parser-recovery-2.stderr
error: unexpected token: `;`
  --> $DIR/parser-recovery-2.rs:10:15
   |
LL |     let x = y.;
   |               ^

error[E0425]: cannot find value `y` in this scope
  --> $DIR/parser-recovery-2.rs:10:13
   |
LL |     let x = y.;
   |             ^ not found in this scope

error[E0425]: cannot find function `foo` in this scope
  --> $DIR/parser-recovery-2.rs:5:17
   |
LL |         let x = foo();
   |                 ^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
